--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     document.getElementById('logo').onload = function() {
       setTimeout(() => {
         window.location.href = "home.html";
-      }, 2000000); // Delay to give users time to see the logo
+      }, 2000); // Delay to give users time to see the logo
     };
 
     // Optionally, add error handling if the image fails to load
