--- a/chat.html
+++ b/chat.html
@@ -1,161 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Baccho ka Sathi - Chat</title>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
-  <style>
-    /* Basic styling for mobile-friendly view */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-    #chat-container {
-      flex-grow: 1;
-      overflow-y: auto;
-      padding: 10px;
-      background-color: #f9f9f9;
-    }
-    .message {
-      padding: 8px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-    }
-    .my-message {
-      background-color: #007bff;
-      color: white;
-      align-self: flex-end;
-    }
-    .other-message {
-      background-color: #f1f1f1;
-      color: #333;
-    }
-    #message-form {
-      display: flex;
-      padding: 10px;
-      border-top: 1px solid #ddd;
-    }
-    #message-input {
-      flex-grow: 1;
-      padding: 8px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      margin-right: 5px;
-    }
-    #send-button {
-      padding: 8px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Baccho ka Sathi - Chat</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
+        .header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
+        }
+        .menu {
+            display: flex;
+            justify-content: center;
+            background-color: #333;
+            padding: 10px;
+        }
+        .menu a {
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+        .menu a:hover {
+            background-color: #575757;
+        }
+        .chat-container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            margin: 20px auto;
+            height: 600px;
+            overflow-y: auto;
+        }
+        .chat-container h2 {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .chat-container input, .chat-container button {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .chat-container button {
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+        }
+        .chat-container button:hover {
+            background-color: #45a049;
+        }
+        .message {
+            margin-bottom: 15px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .message.username {
+            background-color: #e7f3fe;
+        }
+        .message.other {
+            background-color: #f1f1f1;
+        }
+    </style>
 </head>
 <body>
 
-<div id="chat-container">
-  <!-- Messages will be displayed here -->
+<div class="header">
+    <h1>Baccho ka Sathi</h1>
+    <p>Your safety, our priority</p>
 </div>
 
-<form id="message-form" onsubmit="sendMessage(event)">
-  <input type="text" id="message-input" placeholder="Type a message" required>
-  <button type="submit" id="send-button">Send</button>
-</form>
+<!-- Navigation Menu -->
+<div class="menu">
+    <a href="home.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="contact.html">Contact</a>
+    <a href="chat.html">Chat</a>
+    <a href="rating.html">Rating</a>
+</div>
 
-<script>
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyDIzlpUAto67FIAXUUX75faUC4MXCQpHW8",
-  authDomain: "bacchokasathi.firebaseapp.com",
-  projectId: "bacchokasathi",
-  storageBucket: "bacchokasathi.appspot.com",
-  messagingSenderId: "532690500366",
-  appId: "1:532690500366:web:78b5dac8617e52274cf55f",
-  measurementId: "G-JFWZJ6QCZZ"
-};
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
+<div class="chat-container">
+    <h2>Chat Room</h2>
+    <div id="chat-messages"></div>
+    <input type="text" id="usernameInput" placeholder="Enter your name..." required>
+    <input type="text" id="messageInput" placeholder="Enter your message..." required>
+    <button id="sendBtn">Send Message</button>
+</div>
 
-  let userName = ""; // Placeholder for user’s name
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+    import { getFirestore, collection, addDoc, serverTimestamp, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
 
-  // Check for logged-in user
-  auth.onAuthStateChanged((user) => {
-    if (user) {
-      const email = user.email;
-      localStorage.setItem("userEmail", email);
+    // Firebase configuration
+    const firebaseConfig = {
+        apiKey: "AIzaSyDIzlpUAto67FIAXUUX75faUC4MXCQpHW8",
+        authDomain: "bacchokasathi.firebaseapp.com",
+        projectId: "bacchokasathi",
+        storageBucket: "bacchokasathi.appspot.com",
+        messagingSenderId: "532690500366",
+        appId: "1:532690500366:web:78b5dac8617e52274cf55f",
+        measurementId: "G-JFWZJ6QCZZ"
+    };
 
-      // Fetch the user’s name from Firestore (assumes user data is stored here)
-      db.collection("users").doc(user.uid).get().then((doc) => {
-        if (doc.exists) {
-          userName = doc.data().name;
-        } else {
-          console.log("No such document!");
-        }
-      }).catch((error) => {
-        console.log("Error getting document:", error);
-      });
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    } else {
-      // Redirect to login if not authenticated
-      window.location.href = "login.html";
+    // HTML elements
+    const chatMessages = document.getElementById('chat-messages');
+    const usernameInput = document.getElementById('usernameInput');
+    const messageInput = document.getElementById('messageInput');
+    const sendBtn = document.getElementById('sendBtn');
+
+    // Display messages
+    function displayMessage(username, content) {
+        const messageDiv = document.createElement('div');
+        messageDiv.classList.add('message', username === 'Anonymous' ? 'other' : 'username');
+        messageDiv.textContent = `${username}: ${content}`;
+        chatMessages.appendChild(messageDiv);
+        chatMessages.scrollTop = chatMessages.scrollHeight;  // Auto-scroll to bottom
     }
-  });
 
-  // Fetch messages from Firestore
-  db.collection("messages").orderBy("timestamp").onSnapshot((snapshot) => {
-    const chatContainer = document.getElementById("chat-container");
-    chatContainer.innerHTML = ""; // Clear existing messages
-
-    snapshot.forEach((doc) => {
-      const message = doc.data();
-      const messageElement = document.createElement("div");
-      messageElement.classList.add("message");
-      
-      // Check if the message is sent by the current user
-      if (message.sender === userName) {
-        messageElement.classList.add("my-message");
-      } else {
-        messageElement.classList.add("other-message");
-      }
-
-      messageElement.textContent = `${message.sender}: ${message.text}`;
-      chatContainer.appendChild(messageElement);
+    // Listen to real-time updates for messages
+    const messagesQuery = query(collection(db, "messages"), orderBy("timestamp"));
+    onSnapshot(messagesQuery, (snapshot) => {
+        chatMessages.innerHTML = '';  // Clear chat
+        snapshot.forEach((doc) => {
+            const { username, text } = doc.data();
+            displayMessage(username, text);  // Display text message
+        });
     });
 
-    // Scroll to the latest message
-    chatContainer.scrollTop = chatContainer.scrollHeight;
-  });
-
-  // Send message to Firestore
-  function sendMessage(event) {
-    event.preventDefault();
-    const messageInput = document.getElementById("message-input");
-    const messageText = messageInput.value;
-
-    if (userName) {
-      // Add message to Firestore
-      db.collection("messages").add({
-        text: messageText,
-        sender: userName,
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-      }).then(() => {
-        messageInput.value = ""; // Clear the input field
-      }).catch((error) => {
-        console.error("Error sending message:", error);
-      });
-    } else {
-      alert("User not authenticated. Please log in.");
-    }
-  }
+    // Send a new text message
+    sendBtn.addEventListener('click', async () => {
+        const username = usernameInput.value || 'Anonymous';
+        const message = messageInput.value;
+        if (message) {
+            await addDoc(collection(db, "messages"), {
+                username: username,
+                text: message,
+                timestamp: serverTimestamp()
+            });
+            messageInput.value = '';  // Clear input field after sending
+        }
+    });
 </script>
 
 </body>
