--- a/home.html
+++ b/home.html
@@ -24,12 +24,18 @@
     }
     h1 {
       color: #4CAF50;
-      font-size: 1.8em;
+      font-size: 2em;
+      margin: 10px 0;
+    }
+    h2 {
+      font-size: 1.5em;
+      color: #4CAF50;
+      margin-bottom: 10px;
     }
     p {
       line-height: 1.6;
     }
-    .chat-button {
+    .menu-button {
       display: block;
       width: 100%;
       padding: 12px;
@@ -43,8 +49,26 @@
       margin: 20px 0;
       transition: background-color 0.3s;
     }
-    .chat-button:hover {
+    .menu-button:hover {
       background-color: #0056b3;
+    }
+    .menu {
+      display: none;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 10px;
+      margin-top: 10px;
+    }
+    .menu a {
+      display: block;
+      padding: 8px 0;
+      color: #007bff;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+    .menu a:hover {
+      color: #0056b3;
     }
     .section {
       background: #fff;
@@ -52,11 +76,6 @@
       padding: 15px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       margin-bottom: 20px;
-    }
-    .section h2 {
-      font-size: 1.3em;
-      color: #333;
-      margin-bottom: 10px;
     }
     .section ul {
       list-style: none;
@@ -69,7 +88,32 @@
     .section li:last-child {
       border-bottom: none;
     }
+    /* Footer styling */
+    .footer {
+      text-align: center;
+      padding: 15px;
+      background-color: #4CAF50;
+      color: white;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+      margin-top: 20px;
+      border-radius: 5px;
+    }
+    .footer p {
+      margin: 5px 0;
+    }
   </style>
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById('menu');
+      if (menu.style.display === 'block') {
+        menu.style.display = 'none';
+      } else {
+        menu.style.display = 'block';
+      }
+    }
+  </script>
 </head>
 <body>
   <div class="container">
@@ -79,8 +123,15 @@
       <p>Your safety, our priority. Join our community to stay safe and informed.</p>
     </div>
 
-    <!-- Chat Button -->
-    <a href="chat.html" class="chat-button">Go to Community Chat</a>
+    <!-- Menu Button -->
+    <button class="menu-button" onclick="toggleMenu()">Menu</button>
+    <div id="menu" class="menu">
+      <a href="home.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact</a>
+      <a href="chat.html">Chat</a>
+      <a href="rating.html">Rating</a>
+    </div>
 
     <!-- Sections on Child Safety and Resources -->
     <div class="section">
@@ -110,6 +161,21 @@
         <li><strong>First Aid Basics:</strong> Show children basic first aid techniques for common injuries like cuts, scrapes, and burns.</li>
       </ul>
     </div>
+
+    <div class="section">
+      <h2>Additional Resources</h2>
+      <ul>
+        <li><strong>Community Workshops:</strong> Join our workshops to learn more about child safety and engage with other parents.</li>
+        <li><strong>Safety Apps:</strong> Explore various apps designed to keep your children safe online and offline.</li>
+        <li><strong>Expert Advice:</strong> Access articles and videos from child safety experts on various topics.</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div class="footer">
+    <p>&copy; 2024 Baccho ka Sathi. All Rights Reserved.</p>
+    <p>Follow us on <a href="#" style="color: white; text-decoration: underline;">Facebook</a>, <a href="#" style="color: white; text-decoration: underline;">Twitter</a>, and <a href="#" style="color: white; text-decoration: underline;">Instagram</a>.</p>
   </div>
 </body>
 </html>
