--- a/register.html
+++ b/register.html
@@ -1,111 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Baccho ka Sathi - Register</title>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js"></script>
-  <style>
-    /* Basic styling for mobile-friendly view */
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 20px;
-    }
-    .container {
-      width: 100%;
-      max-width: 400px;
-      padding: 20px;
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-    h2 {
-      color: #333;
-    }
-    .input-field {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-    .button {
-      width: 100%;
-      padding: 10px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    .link {
-      margin-top: 20px;
-      color: #007bff;
-      text-decoration: none;
-      display: block;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <style>
+        /* Basic styles for the login form */
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        form {
+            background: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        input[type="email"], input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            font-size: 16px;
+        }
+        .register-link {
+            display: block;
+            text-align: center;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
 
-<div class="container">
-  <h2>Create an Account</h2>
-  <input type="text" id="name" class="input-field" placeholder="Name" required>
-  <input type="email" id="email" class="input-field" placeholder="Email" required>
-  <input type="password" id="password" class="input-field" placeholder="Password" required>
-  <button class="button" onclick="register()">Register</button>
-  <a href="login.html" class="link">Already have an account? Log in</a>
-</div>
+<form id="login-form" onsubmit="loginUser(event)">
+    <h2>Login</h2>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button type="submit">Login</button>
+    <a href="#" class="register-link" onclick="redirectToRegister()">Don't have an account? Register here</a>
+</form>
+
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
+
+    // Firebase configuration
+    const firebaseConfig = {
+        apiKey: "AIzaSyDIzlpUAto67FIAXUUX75faUC4MXCQpHW8",
+        authDomain: "bacchokasathi.firebaseapp.com",
+        projectId: "bacchokasathi",
+        storageBucket: "bacchokasathi.appspot.com",
+        messagingSenderId: "532690500366",
+        appId: "1:532690500366:web:78b5dac8617e52274cf55f",
+        measurementId: "G-JFWZJ6QCZZ"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    // Define the loginUser function
+    window.loginUser = async function(event) {
+        event.preventDefault();
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+
+        try {
+            const userCredential = await signInWithEmailAndPassword(auth, email, password);
+            alert("Login successful! Redirecting to chat...");
+            localStorage.setItem("userEmail", email); // Save email in local storage
+            window.location.href = "chat.html"; // Redirect to chat page
+        } catch (error) {
+            const errorMessage = error.message;
+            alert(`Error: ${errorMessage}`);
+        }
+    };
+</script>
 
 <script>
- // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyDIzlpUAto67FIAXUUX75faUC4MXCQpHW8",
-  authDomain: "bacchokasathi.firebaseapp.com",
-  projectId: "bacchokasathi",
-  storageBucket: "bacchokasathi.appspot.com",
-  messagingSenderId: "532690500366",
-  appId: "1:532690500366:web:78b5dac8617e52274cf55f",
-  measurementId: "G-JFWZJ6QCZZ"
-};
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-
-  // Register new user
-  function register() {
-    const name = document.getElementById("name").value;
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    if (!name) {
-      alert("Please enter your name.");
-      return;
-    }
-
-    auth.createUserWithEmailAndPassword(email, password)
-      .then((userCredential) => {
-        const user = userCredential.user;
-        // Save user's email in local storage for chat access
-        localStorage.setItem("userEmail", email);
-
-        // You can store the user's name and other details in Firestore if needed
-
-        // Redirect to chat page after successful registration
-        window.location.href = "chat.html";
-      })
-      .catch((error) => {
-        console.error("Error during registration:", error.message);
-        alert("Failed to register. " + error.message);
-      });
-  }
+    // Define the redirectToRegister function
+    window.redirectToRegister = function() {
+        window.location.href = "register.html"; // Adjust the path to your registration page
+    };
 </script>
 
 </body>
