--- a/chat.html
+++ b/chat.html
@@ -5,57 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baccho ka Sathi - Chat</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+        /* General styling for mobile responsiveness */
+        body, html {
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        .container {
+            padding: 20px;
+            max-width: 480px;
+            margin: auto;
         }
         .header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px 20px;
             text-align: center;
+            margin-bottom: 20px;
+        }
+        h1 {
+            color: #4CAF50;
+            font-size: 2em;
+            margin: 10px 0;
+        }
+        p {
+            line-height: 1.6;
+        }
+        .menu-button {
+            display: block;
+            width: 100%;
+            padding: 12px;
+            background-color: #007bff;
+            color: #fff;
+            text-align: center;
+            font-size: 1.1em;
+            font-weight: bold;
+            border-radius: 5px;
+            text-decoration: none;
+            margin: 20px 0;
+            transition: background-color 0.3s;
+        }
+        .menu-button:hover {
+            background-color: #0056b3;
         }
         .menu {
-            display: flex;
-            justify-content: center;
-            background-color: #333;
+            display: none;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 10px;
+            margin-top: 10px;
         }
         .menu a {
-            color: white;
-            padding: 14px 20px;
+            display: block;
+            padding: 8px 0;
+            color: #007bff;
             text-decoration: none;
-            text-align: center;
+            transition: color 0.3s;
         }
         .menu a:hover {
-            background-color: #575757;
+            color: #0056b3;
         }
         .chat-container {
             background-color: white;
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            margin: 20px auto;
-            height: 600px;
-            overflow-y: auto;
+            margin: 20px 0;
         }
         .chat-container h2 {
             margin-bottom: 20px;
             text-align: center;
         }
-        .chat-container input, .chat-container button {
-            width: 100%;
+        .chat-container input {
+            width: calc(100% - 20px);
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         .chat-container button {
+            width: 100%;
+            padding: 10px;
             background-color: #4CAF50;
             color: white;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
         }
         .chat-container button:hover {
@@ -72,90 +106,118 @@
         .message.other {
             background-color: #f1f1f1;
         }
+        .footer {
+            text-align: center;
+            padding: 15px;
+            background-color: #4CAF50;
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            margin-top: 20px;
+            border-radius: 5px;
+        }
+        .footer p {
+            margin: 5px 0;
+        }
     </style>
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById('menu');
+            menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+        }
+    </script>
 </head>
 <body>
+    <div class="container">
+        <!-- Header -->
+        <div class="header">
+            <h1>Baccho ka Sathi</h1>
+            <p>Your safety, our priority</p>
+        </div>
 
-<div class="header">
-    <h1>Baccho ka Sathi</h1>
-    <p>Your safety, our priority</p>
-</div>
+        <!-- Menu Button -->
+        <button class="menu-button" onclick="toggleMenu()">Menu</button>
+        <div id="menu" class="menu">
+            <a href="home.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
+            <a href="chat.html">Chat</a>
+            <a href="rating.html">Rating</a>
+        </div>
 
-<!-- Navigation Menu -->
-<div class="menu">
-    <a href="home.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact</a>
-    <a href="chat.html">Chat</a>
-    <a href="rating.html">Rating</a>
-</div>
+        <div class="chat-container">
+            <h2>Chat Room</h2>
+            <div id="chat-messages" style="max-height: 300px; overflow-y: auto;"></div>
+            <input type="text" id="usernameInput" placeholder="Enter your name..." required>
+            <input type="text" id="messageInput" placeholder="Enter your message..." required>
+            <button id="sendBtn">Send Message</button>
+        </div>
+    </div>
 
-<div class="chat-container">
-    <h2>Chat Room</h2>
-    <div id="chat-messages"></div>
-    <input type="text" id="usernameInput" placeholder="Enter your name..." required>
-    <input type="text" id="messageInput" placeholder="Enter your message..." required>
-    <button id="sendBtn">Send Message</button>
-</div>
+    <!-- Footer -->
+    <div class="footer">
+        <p>&copy; 2024 Baccho ka Sathi. All Rights Reserved.</p>
+        <p>Follow us on <a href="#" style="color: white; text-decoration: underline;">Facebook</a>, <a href="#" style="color: white; text-decoration: underline;">Twitter</a>, and <a href="#" style="color: white; text-decoration: underline;">Instagram</a>.</p>
+    </div>
 
-<script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
-    import { getFirestore, collection, addDoc, serverTimestamp, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+        import { getFirestore, collection, addDoc, serverTimestamp, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
 
-    // Firebase configuration
-    const firebaseConfig = {
-        apiKey: "AIzaSyDIzlpUAto67FIAXUUX75faUC4MXCQpHW8",
-        authDomain: "bacchokasathi.firebaseapp.com",
-        projectId: "bacchokasathi",
-        storageBucket: "bacchokasathi.appspot.com",
-        messagingSenderId: "532690500366",
-        appId: "1:532690500366:web:78b5dac8617e52274cf55f",
-        measurementId: "G-JFWZJ6QCZZ"
-    };
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDIzlpUAto67FIAXUUX75faUC4MXCQpHW8",
+            authDomain: "bacchokasathi.firebaseapp.com",
+            projectId: "bacchokasathi",
+            storageBucket: "bacchokasathi.appspot.com",
+            messagingSenderId: "532690500366",
+            appId: "1:532690500366:web:78b5dac8617e52274cf55f",
+            measurementId: "G-JFWZJ6QCZZ"
+        };
 
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
 
-    // HTML elements
-    const chatMessages = document.getElementById('chat-messages');
-    const usernameInput = document.getElementById('usernameInput');
-    const messageInput = document.getElementById('messageInput');
-    const sendBtn = document.getElementById('sendBtn');
+        // HTML elements
+        const chatMessages = document.getElementById('chat-messages');
+        const usernameInput = document.getElementById('usernameInput');
+        const messageInput = document.getElementById('messageInput');
+        const sendBtn = document.getElementById('sendBtn');
 
-    // Display messages
-    function displayMessage(username, content) {
-        const messageDiv = document.createElement('div');
-        messageDiv.classList.add('message', username === 'Anonymous' ? 'other' : 'username');
-        messageDiv.textContent = `${username}: ${content}`;
-        chatMessages.appendChild(messageDiv);
-        chatMessages.scrollTop = chatMessages.scrollHeight;  // Auto-scroll to bottom
-    }
-
-    // Listen to real-time updates for messages
-    const messagesQuery = query(collection(db, "messages"), orderBy("timestamp"));
-    onSnapshot(messagesQuery, (snapshot) => {
-        chatMessages.innerHTML = '';  // Clear chat
-        snapshot.forEach((doc) => {
-            const { username, text } = doc.data();
-            displayMessage(username, text);  // Display text message
-        });
-    });
-
-    // Send a new text message
-    sendBtn.addEventListener('click', async () => {
-        const username = usernameInput.value || 'Anonymous';
-        const message = messageInput.value;
-        if (message) {
-            await addDoc(collection(db, "messages"), {
-                username: username,
-                text: message,
-                timestamp: serverTimestamp()
-            });
-            messageInput.value = '';  // Clear input field after sending
+        // Display messages
+        function displayMessage(username, content) {
+            const messageDiv = document.createElement('div');
+            messageDiv.classList.add('message', username === 'Anonymous' ? 'other' : 'username');
+            messageDiv.textContent = `${username}: ${content}`;
+            chatMessages.appendChild(messageDiv);
+            chatMessages.scrollTop = chatMessages.scrollHeight;  // Auto-scroll to bottom
         }
-    });
-</script>
 
+        // Listen to real-time updates for messages
+        const messagesQuery = query(collection(db, "messages"), orderBy("timestamp"));
+        onSnapshot(messagesQuery, (snapshot) => {
+            chatMessages.innerHTML = '';  // Clear chat
+            snapshot.forEach((doc) => {
+                const { username, text } = doc.data();
+                displayMessage(username, text);  // Display text message
+            });
+        });
+
+        // Send a new text message
+        sendBtn.addEventListener('click', async () => {
+            const username = usernameInput.value || 'Anonymous';
+            const message = messageInput.value;
+            if (message) {
+                await addDoc(collection(db, "messages"), {
+                    username: username,
+                    text: message,
+                    timestamp: serverTimestamp()
+                });
+                messageInput.value = '';  // Clear input field after sending
+            }
+        });
+    </script>
 </body>
 </html>
