--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Baccho ka Sathi - Welcome</title>
+  
+  <!-- Meta Tags for SEO and Social Media -->
+  <meta name="description" content="Baccho ka Sathi is a community child safety network, connecting parents and children through local groups for safety and educational support.">
+  <meta name="keywords" content="child safety, community network, education, Baccho ka Sathi, child protection, local groups">
+  <meta name="author" content="Deepak Mathur">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Baccho ka Sathi - Welcome">
+  <meta property="og:description" content="Join Baccho ka Sathi for a secure community for children and parents.">
+  <meta property="og:image" content="logo.jpg"> <!-- Make sure the image path is correct -->
+  <meta property="og:url" content="https://yourwebsite.com"> <!-- Replace with your actual website URL -->
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Baccho ka Sathi - Welcome">
+  <meta name="twitter:description" content="Join Baccho ka Sathi for a secure community for children and parents.">
+  <meta name="twitter:image" content="logo.jpg"> <!-- Make sure the image path is correct -->
+
   <style>
     /* Center the image on the page */
     body, html {
